# rust-github-actions

./: .gitattributes  .gitignore  Cargo.toml  LICENSE  README.md  justfile
.github/workflows/: build-zig.yml  build.yml  checks.yml  clear-cache.yml  markdown-checks.yml  release.yml
src/: main.rs
