[package]
name = "todo"
version = "0.1.0"
edition = "2021"
rust-version = "1.60"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bpaf = "0.9.9"
hex = "0.4.3"
tracing = "0.1.40"

[profile.dev]
opt-level = "s"
lto = true
codegen-units = 1
strip = true

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
strip = true
